# emerald

./: CMakeLists.txt
.github/workflows/: build-test.yml
include/emerald/actions/: SizeTo.hpp  TextTo.hpp
include/emerald/nodes/: DragButton.hpp  MiniLayer.hpp
include/emerald/utils/: Settings.hpp
include/uilib/: DragButton.hpp  MiniLayer.hpp
include/uilib/actions/: SizeTo.hpp  TextTo.hpp
src/: DragButton.cpp
src/actions/: SizeTo.cpp  TextTo.cpp
test/: CMakeLists.txt  mod.json
test/src/: main.cpp
